[package]
name = "todo"
version = "0.1.0"
authors = ["huhn511 <huhn@einfachiota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1.0.110"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = "0.5.4"
